force-app/main/default/objects/Product_Settings__c/Product_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Define the Global Product Attributes</description>
    <label>Product Settings</label>
</CustomObject>