force-app/main/default/objects/Product_Settings__c/fields/Additional_Cost_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Additional_Cost_Product_Group__c</fullName>
    <label>Additional Cost Product Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>