force-app/main/default/objects/Product_Settings__c/fields/AX_Products__c.field-meta.xml
<CustomField>
    <fullName>AX_Products__c</fullName>
    <description>List of the Products that use AX</description>
    <label>AX Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>