force-app/main/default/objects/Product_Settings__c/fields/Extra_Sales_Product__c.field-meta.xml
<CustomField>
    <fullName>Extra_Sales_Product__c</fullName>
    <label>Extra Sales Product Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>