force-app/main/default/objects/Product_Settings__c/fields/Installable_Products__c.field-meta.xml
<CustomField>
    <fullName>Installable_Products__c</fullName>
    <label>Installable Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>