force-app/main/default/objects/Product_Settings__c/fields/Main_Product_Codes__c.field-meta.xml
<CustomField>
    <fullName>Main_Product_Codes__c</fullName>
    <label>Main Product Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>