force-app/main/default/objects/Product_Settings__c/fields/Other_Products__c.field-meta.xml
<CustomField>
    <fullName>Other_Products__c</fullName>
    <label>Other Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>