force-app/main/default/objects/Product_Settings__c/fields/Reclamation_Product_Codes__c.field-meta.xml
<CustomField>
    <fullName>Reclamation_Product_Codes__c</fullName>
    <label>Reclamation Product Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>