force-app/main/default/objects/Product_Settings__c/fields/Service_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Service_Product_Group__c</fullName>
    <label>Service Product Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>