force-app/main/default/objects/Product_Settings__c/fields/Sovelia_Products__c.field-meta.xml
<CustomField>
    <fullName>Sovelia_Products__c</fullName>
    <label>Sovelia Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>