force-app/main/default/objects/Product_Settings__c/fields/Spare_Part_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Spare_Part_Product_Group__c</fullName>
    <label>Spare Part Product Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>