force-app/main/default/objects/Product_Settings__c/fields/Special_Balcony_Products__c.field-meta.xml
<CustomField>
    <fullName>Special_Balcony_Products__c</fullName>
    <label>Special Balcony Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>