force-app/main/default/objects/Product_Settings__c/fields/Special_Bracket_Products__c.field-meta.xml
<CustomField>
    <fullName>Special_Bracket_Products__c</fullName>
    <label>Special Bracket Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>