force-app/main/default/objects/Product_Settings__c/fields/Special_Color_Products__c.field-meta.xml
<CustomField>
    <fullName>Special_Color_Products__c</fullName>
    <description>Product Color that requires Special Handling and Extra Time</description>
    <label>Special Color Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>