force-app/main/default/objects/Product_Settings__c/fields/Special_Glass_Products__c.field-meta.xml
<CustomField>
    <fullName>Special_Glass_Products__c</fullName>
    <description>Glass that requires Special treatment and extra Time</description>
    <label>Special Glass Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>