force-app/main/default/objects/Product_Settings__c/fields/Special_Terrace_Products__c.field-meta.xml
<CustomField>
    <fullName>Special_Terrace_Products__c</fullName>
    <label>Special Terrace Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>