force-app/main/default/objects/Product_Settings__c/fields/Special_Treatment_Products__c.field-meta.xml
<CustomField>
    <fullName>Special_Treatment_Products__c</fullName>
    <description>Products that require special Treatment and extra Time
Like SilkPrinting or cutouts</description>
    <label>Special Treatment Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>