force-app/main/default/objects/Product_Settings__c/fields/Visual_Products__c.field-meta.xml
<CustomField>
    <fullName>Visual_Products__c</fullName>
    <label>Visual Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>